--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,24 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="jumbotron jumbotron-header">
+  <div class="container">
+    <div class="col-lg-12">
+      <h1 class="jumbo-title text-center">{{ page.title }}</h1>
+    </div>
+  </div>
+</div>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="container">
+  <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <div class="post">
+        <article class="post-content">
+          {{ content }}
+        </article>
+      </div>
+    </div>
+    <div class="col-lg-2"></div>
+  </div>
 </div>
