--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,41 @@ pre > code {
   background: none !important;
 }
 
+.navbar-inverse {
+  background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
+  background-image:      -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
+  background-image:         linear-gradient(to bottom, #3c3c3c 0%, #222 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+  background-repeat: repeat-x;
+}
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .active > a {
+  background-image: -webkit-linear-gradient(top, #080808 0%, #0f0f0f 100%);
+  background-image:      -o-linear-gradient(top, #080808 0%, #0f0f0f 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#080808), to(#0f0f0f));
+  background-image:         linear-gradient(to bottom, #080808 0%, #0f0f0f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff080808', endColorstr='#ff0f0f0f', GradientType=0);
+  background-repeat: repeat-x;
+  -webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
+          box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
+}
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav > li > a {
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+}
+
+.navbar-inverse .navbar-brand {
+  color: #fff;
+}
+
+/* Buttons
+-------------------------------------------------- */
+.btn-rounded {
+  border-radius: 10rem;
+}
+
 /* Jumbotron
 -------------------------------------------------- */
 .jumbotron-header {
@@ -152,6 +187,39 @@ h1.jumbo-title {
   font-size: 30px;
   margin-bottom: 0px;
 }
+/* Social List
+------------------------------------------------- */
+ul.social-list {
+  list-style-type: none;
+}
+
+.social-list {
+  font-size: 1.2em;
+}
+
+.social-list-item {
+  background: none;
+  border-radius: 3px;
+  border: 0px;
+  padding: 5px 10px 5px 10px;
+  text-align: center;
+}
+
+.social-meta {
+  float: right;
+  color: gray;
+}
+
+.social-footer {
+  float: left;
+  color: gray;
+}
+
+ul.social-list button {
+  width: 60%;
+  font-size: 20px;
+}
+
 
 /* Post List
 -------------------------------------------------- */
@@ -381,3 +449,5 @@ ul.post-list {
 .highlight .il {
   color: #099;
 }
+
+
