--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,12 @@
   {% include head.html %}
 
   <body>
-    {% include header.html %}
+    <main>
+      {% include header.html %}
 
-    {{ content }}
+      {{ content }}
 
-    {% include footer.html %}
+      {% include footer.html %}
+    </main>
   </body>
 </html>
