--- a/css/main.css
+++ b/css/main.css
@@ -108,9 +108,13 @@ pre > code {
 
 /* Footer Stuff
 -------------------------------------------------- */
-.footer {
+footer {
   border-top: 1px solid #e8e8e8;
-  padding: 30px 0;
+  padding: 20px;
+  background-color: #121212;
+  color: #828282;
+  font-size: 10px;
+  text-align: left;
 }
 
 .contact-list,
