--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer mt-auto">
   <div class="container">
     PatrickTulskie.com &copy; {{ site.time | date: '%Y' }}. All rights reserved.
   </div>
