--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,8 @@ body {
   color: #111;
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
+  min-height: 100vh;
+  position: relative;
 }
 
 /* Set `margin-bottom` to maintain vertical rhythm
