--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
